[tool.poetry]
name = "guardian-agent"
version = "0.1.0"
description = "AI-powered code review agent for the Hive platform"
authors = ["Hive Team"]
readme = "README.md"
packages = [{include = "guardian_agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
hive-app-toolkit = {path = "../../packages/hive-app-toolkit", develop = true}
hive-ai = {path = "../../packages/hive-ai", develop = true}
hive-async = {path = "../../packages/hive-async", develop = true}
hive-db = {path = "../../packages/hive-db", develop = true}
hive-cache = {path = "../../packages/hive-cache", develop = true}
hive-logging = {path = "../../packages/hive-logging", develop = true}
hive-config = {path = "../../packages/hive-config", develop = true}
hive-errors = {path = "../../packages/hive-errors", develop = true}
hive-tests = {path = "../../packages/hive-tests", develop = true}
click = "^8.1.0"
pydantic = "^2.0.0"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.0"
black = "^24.8.0"
mypy = "^1.8.0"
ruff = "^0.13.2"
isort = "^5.13.0"

# ========================================
# Ruff Configuration (Linter & Formatter)
# ========================================
[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    ".venv",
    "archive",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S"]
ignore = ["E501", "B008", "C901", "COM812", "COM818", "COM819"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = [
    "hive_logging", "hive_config", "hive_db", "hive_cache", "hive_errors",
    "hive_bus", "hive_async", "hive_performance", "hive_ai", "hive_deployment",
    "hive_service_discovery", "hive_tests", "hive_models", "hive_algorithms",
    "hive_cli", "hive_app_toolkit", "hive_orchestration", "hive_graph",
]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S602", "S604"]
"scripts/**" = ["S602", "S604"]
"archive/**" = ["S"]

[tool.poetry.scripts]
guardian = "guardian_agent.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
