[tool.poetry]
name = "hive-agent-runtime"
version = "0.1.0"
description = "Agentic workflow runtime for Hive AI - agents, tasks, and workflow orchestration"
authors = ["Hive Team"]
readme = "README.md"
packages = [{include = "hive_agent_runtime", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
hive-logging = {path = "../../packages/hive-logging", develop = true}
hive-cache = {path = "../../packages/hive-cache", develop = true}
hive-ai = {path = "../../packages/hive-ai", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "DTZ", "T10", "DJ", "EM", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401", "S101", "PLR0913", "PLR2004"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
