[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hive-orchestrator"
version = "1.0.0"
description = "Hive orchestration engine - Queen and Worker management"
authors = [ "Hive System <hive@example.com>",]
[[tool.poetry.packages]]
include = "hive_orchestrator"
from = "src"

[tool.black]
line-length = 120
target-version = [ "py38", "py39", "py310", "py311",]
include = "\\.pyi?$"
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | build\n  | dist\n  | archive\n)/\n"

[tool.ruff]
line-length = 120
target-version = "py38"
select = [ "E", "W", "F", "I", "B", "C4", "UP",]
ignore = [ "E501", "B008", "C901",]
exclude = [ ".git", "__pycache__", "dist", "build", ".venv", "archive",]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [ "archive/", "legacy/", "tests/",]

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
colorama = "^0.4.5"
pydantic = "^2.0.0"
click = "^8.0.0"
rich = "^13.7.0"

[tool.poetry.scripts]
hive-queen = "hive_orchestrator.queen:main"
hive-worker = "hive_orchestrator.worker:main"
hive-orchestrator = "hive_orchestrator.cli:cli"
hive-clean = "hive_orchestrator.clean_hive:main"
hive-status = "hive_orchestrator.hive_status:main"
hive-dashboard = "hive_orchestrator.dashboard:main"

[tool.ruff.lint]
select = [ "E4", "E7", "E9", "F", "I",]

[tool.ruff.format]
quote-style = "double"

[tool.poetry.dependencies.hive-config]
path = "../../packages/hive-config"
develop = true

[tool.poetry.dependencies.hive-db]
path = "../../packages/hive-db"
develop = true

[tool.poetry.dependencies.hive-logging]
path = "../../packages/hive-logging"
develop = true

[tool.poetry.dependencies.hive-deployment]
path = "../../packages/hive-deployment"
develop = true

[tool.poetry.dependencies.hive-bus]
path = "../../packages/hive-bus"
develop = true

[tool.poetry.dependencies.hive-errors]
path = "../../packages/hive-errors"
develop = true
