[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hive-orchestrator"
version = "1.0.0"
description = "Hive orchestration engine - Queen and Worker management"
authors = [ "Hive System <hive@example.com>",]
[[tool.poetry.packages]]
include = "hive_orchestrator"
from = "src"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
colorama = "^0.4.5"
pydantic = "^2.0.0"
click = "^8.0.0"
rich = "^13.7.0"

[tool.poetry.scripts]
hive-queen = "hive_orchestrator.queen:main"
hive-worker = "hive_orchestrator.worker:main"
hive-orchestrator = "hive_orchestrator.cli:cli"
hive-clean = "hive_orchestrator.clean_hive:main"
hive-status = "hive_orchestrator.hive_status:main"
hive-dashboard = "hive_orchestrator.dashboard:main"

[tool.poetry.dependencies.hive-config]
path = "../../packages/hive-config"
develop = true

[tool.poetry.dependencies.hive-db]
path = "../../packages/hive-db"
develop = true

[tool.poetry.dependencies.hive-logging]
path = "../../packages/hive-logging"
develop = true

[tool.poetry.dependencies.hive-deployment]
path = "../../packages/hive-deployment"
develop = true

[tool.poetry.dependencies.hive-bus]
path = "../../packages/hive-bus"
develop = true

[tool.poetry.dependencies.hive-errors]
path = "../../packages/hive-errors"
develop = true

# ========================================
# Ruff Configuration (Linter & Formatter)
# ========================================
[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    ".venv",
    "archive",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S"]
ignore = ["E501", "B008", "C901", "COM812", "COM818", "COM819"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = [
    "hive_logging", "hive_config", "hive_db", "hive_cache", "hive_errors",
    "hive_bus", "hive_async", "hive_performance", "hive_ai", "hive_deployment",
    "hive_service_discovery", "hive_tests", "hive_models", "hive_algorithms",
    "hive_cli", "hive_app_toolkit", "hive_orchestration", "hive_graph",
]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S602", "S604"]
"scripts/**" = ["S602", "S604"]
"archive/**" = ["S"]
